[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbug_package"
version = "0.0.1"
authors = [
  { name="Jonathan Stucken", email="jstucken@yahoo.com" },
]
description = "A minimal debug package for printing out things nicely"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires = [
  "cowsay>=0.1"
]