[tool.poetry]
name = "dbug-package"
version = "0.1.0"
description = "A minimal debug package for printing out things nicely"
authors = ["Jonathan Stucken <jstucken@yahoo.com>"]
readme = "README.md"
packages = [{include = "dbug_package", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
rich = "^13.3.3"
typer = "^0.14.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
